<resources>
    <string name="app_name">myapp</string>
    <string name="dr_profile_title">درباره شما ...</string>
    <string name="dr_clininc_title">درباره مطب ...</string>
    <string name="dr_nobat_title">مدیریت نوبت</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="pageTitle_nobat">نوبت دهی</string>
    <string name="pageTitle_info">اطلاعات</string>
    <string name="pageTitle_comments">اطلاعیه</string>
    <string name="nobat_date">تاریخ نوبت دهی</string>
    <string name="nobat_start_time">زمان شروع نوبت دهی</string>
    <string name="nobat_end_time">زمان پایان نوبت دهی</string>
    <string name="nobat_capacity">حداکثر ظرفیت</string>
    <string name="nobat_btn_update">ویرایش</string>
    <string name="nobat_btn_delete">حذف</string>
    <string name="nobat_btn_insert">ثبت نوبت</string>
    <string name="drImgProfile">عکس پروفایل</string>
    <string name="drFirstName">نام</string>
    <string name="drLastName">نام خانوادگی</string>
    <string name="drMobile">موبایل</string>
    <string name="drUserName">کد ملی</string>
    <string name="drPassword">رمز عبور</string>
    <string name="drConfirmPassword">تکرار رمز عبور</string>
    <string name="drCity">شهر</string>
    <string name="personalInfo_btn_insert">ثبت مشخصات</string>
    <string name="drSecretary">نام منشی</string>
    <string name="drAddress">آدرس</string>
    <string name="drPhone">تلفن</string>
    <string name="clinic_btn_insert">ثبت مشخصات</string>
    <string name="patientsName">نام</string>
    <string name="patientsFamily">نام خانوادگی</string>
    <string name="patientsStartDate">از تاریخ</string>
    <string name="patientsEndDate">تا تاریخ</string>
    <string name="patientsSearch">جستجو</string>
    <string name="sickName">نام</string>
    <string name="sickFamily">نام خانوادگی</string>
    <string name="sickAddress">آدرس</string>
    <string name="sickPhone">تلفن</string>
    <string name="userProfileName">نام</string>
    <string name="userProfileFamily">نام خانوادگی</string>
    <string name="userProfileMobile">شماره تلفن همراه</string>
    <string name="userProfileUserName">نام کاربری</string>
    <string name="userProfilePassword">رمز عبور</string>
    <string name="userProfileRePassword">تکرار رمز عبور</string>
    <string name="userProfileCity">شهر</string>
    <string name="userProfileBtnInsert">ثبت مشخصات</string>
    <string name="userProfileBtnUpdate">تغییر مشخصات</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_define_dr">defineDr</string>
    <string name="addTurn_member_username">نام</string>
    <string name="addTurn_member_family">نام خانوادگی</string>
    <string name="addTurn_member_mobile">شماره تلفن همراه</string>
    <string name="company_name">شرکت کسب و کار برتر اندیشان پارس کیمیا</string>
    <string name="company_address">ساری-خیابان دخانیات-ابتدای خیابان پژمان-مجتمع میلاد نور-پلاک68</string>
    <string name="company_tell">01133293353</string>
    <string name="company_postalcode">4813815683</string>
    <string name="company_email">pezeshkyar@yahoo.com</string>
    <string name="company_site">Http://www.pezashkyar.ir</string>
    <string name="google_play_map">AIzaSyDPxvHFihvS4p2yPFoH53zZ6X8Ex0CZIww</string>
    <string name="ws_url">http://pezeshkiar.com:8080/pezeshkyar_new_user3/services/Webservices?wsdl</string>
    <string name="ws_package">http://docTurn/</string>
    <string name="ws_getProvince">getProvince</string>
    <string name="ws_id">id</string>
    <string name="ws_name">name</string>
    <string name="ws_getCityOfProvince">getCityOfProvince</string>
    <string name="ws_provinceID">provinceID</string>
    <string name="ws_provinceId">provinceId</string>
    <string name="ws_register">register</string>
    <string name="ws_lastname">lastname</string>
    <string name="ws_mobileno">mobileno</string>
    <string name="ws_username">username</string>
    <string name="ws_password">password</string>
    <string name="ws_cityid">cityid</string>
    <string name="ws_pic">pic</string>
    <string name="ws_email">email</string>
    <string name="ws_updateUserInfo3">updateUserInfo3</string>
    <string name="ws_newPassword">newPassword</string>
    <string name="ws_getRoleInAll">getRoleInAll</string>
    <string name="ws_getUserInfoWithoutPic">getUserInfoWithoutPic</string>
    <string name="ws_officeId">officeId</string>
    <string name="ws_role">role</string>
    <string name="ws_city">city</string>
    <string name="ws_provinceid">provinceid</string>
    <string name="ws_province">province</string>
    <string name="ws_getOfficeInfo">getOfficeInfo</string>
    <string name="ws_doctorUsername">doctorUsername</string>
    <string name="ws_doctorName">doctorName</string>
    <string name="ws_doctorLastName">doctorLastName</string>
    <string name="ws_cityId">cityId</string>
    <string name="ws_specId">specId</string>
    <string name="ws_spec">spec</string>
    <string name="ws_subspecId">subspecId</string>
    <string name="ws_subSpec">subSpec</string>
    <string name="ws_address">address</string>
    <string name="ws_tellNo">tellNo</string>
    <string name="ws_latitude">latitude</string>
    <string name="ws_longitude">longitude</string>
    <string name="ws_biograophy">biograophy</string>
    <string name="ws_timeQuantum">timeQuantum</string>
    <string name="ws_getOfficeForUser">getOfficeForUser</string>
    <string name="ws_getAllOfficeForCity">getAllOfficeForCity</string>
    <string name="ws_count">count</string>
    <string name="ws_index">index</string>
    <string name="ws_getOfficeForDoctorOrSecretary">getOfficeForDoctorOrSecretary</string>
    <string name="ws_isMyOffice">isMyOffice</string>
    <string name="ws_getOfficeByFilter">getOfficeByFilter</string>
    <string name="ws_firstName">firstName</string>
    <string name="ws_lastName">lastName</string>
    <string name="ws_getDoctorPic">getDoctorPic</string>
    <string name="ws_getUserPic">getUserPic</string>
    <string name="ws_updateUserPic2">updateUserPic2</string>
    <string name="ws_updateOfficeLocation">updateOfficeLocation</string>
    <string name="ws_getSpec">getSpec</string>
    <string name="ws_getSubSpec">getSubSpec</string>
    <string name="ws_updateOfficeInfo">updateOfficeInfo</string>
    <string name="ws_biography">biography</string>
    <string name="ws_getAllTurnFromToday">getAllTurnFromToday</string>
    <string name="ws_date">date</string>
    <string name="ws_longDate">longDate</string>
    <string name="ws_hour">hour</string>
    <string name="ws_min">min</string>
    <string name="ws_capacity">capacity</string>
    <string name="ws_duration">duration</string>
    <string name="ws_reserved">reserved</string>
    <string name="ws_isReserved">isReserved</string>
    <string name="ws_reserveForUser">reserveForUser</string>
    <string name="ws_turnId">turnId</string>
    <string name="ws_firstReservationId">firstReservationId</string>
    <string name="ws_taskId">taskId</string>
    <string name="ws_numberOfTurns">numberOfTurns</string>
    <string name="ws_patientUserName">patientUserName</string>
    <string name="ws_cancelReservation">cancelReservation</string>
    <string name="ws_reservationId">reservationId</string>
    <string name="ws_searchUser">searchUser</string>
    <string name="ws_mobileNo">mobileNo</string>
    <string name="ws_getReservationByTurnId">getReservationByTurnId</string>
    <string name="ws_patientFirstName">patientFirstName</string>
    <string name="ws_patientLastName">patientLastName</string>
    <string name="ws_payment">payment</string>
    <string name="ws_getTasks">getTasks</string>
    <string name="ws_taskGroupId">taskGroupId</string>
    <string name="ws_price">price</string>
    <string name="ws_getTaskGroups">getTaskGroups</string>
    <string name="ws_reserveForGuest">reserveForGuest</string>
    <string name="ws_patientPhoneNo">patientPhoneNo</string>
    <string name="ws_patientCityId">patientCityId</string>
    <string name="ws_reserveForMe">reserveForMe</string>
    <string name="ws_addTurnByDate">addTurnByDate</string>
    <string name="ws_fromDate">fromDate</string>
    <string name="ws_toDate">toDate</string>
    <string name="ws_dayOfWeek">dayOfWeek</string>
    <string name="ws_getAllTurn">getAllTurn</string>
    <string name="ws_removeTurn">removeTurn</string>
    <string name="ws_getPatientTurnInfoByDate">getPatientTurnInfoByDate</string>
    <string name="ws_patientUsername">patientUsername</string>
    <string name="ws_shortDate">shortDate</string>
    <string name="ws_taskName">taskName</string>
    <string name="ws_sendMessageBatch">sendMessageBatch</string>
    <string name="ws_receivers">receivers</string>
    <string name="ws_phoneNo">phoneNo</string>
    <string name="ws_subject">subject</string>
    <string name="ws_message">message</string>
    <string name="ws_getUnreadMessages">getUnreadMessages</string>
    <string name="ws_senderUsername">senderUsername</string>
    <string name="ws_senderFirstName">senderFirstName</string>
    <string name="ws_senderLastName">senderLastName</string>
    <string name="ws_time">time</string>
    <string name="ws_getAllUnreadMessages">getAllUnreadMessages</string>
    <string name="ws_getAllMessages1">getAllMessages1</string>
    <string name="ws_setMessageRead2">setMessageRead2</string>
    <string name="ws_messageId">messageId</string>
    <string name="ws_getReservationByUser">getReservationByUser</string>
    <string name="ws_doctorFirstName">doctorFirstName</string>
    <string name="ws_doctorSpec">doctorSpec</string>
    <string name="ws_doctorSubSpec">doctorSubSpec</string>
    <string name="ws_removeMessage2">removeMessage2</string>
    <string name="ws_reception">reception</string>
    <string name="ws_description">description</string>
    <string name="ws_getTodayPatient">getTodayPatient</string>
    <string name="ws_taskGroupName">taskGroupName</string>
    <string name="ws_getPatientFile">getPatientFile</string>
    <string name="ws_totalPayment">totalPayment</string>
    <string name="ws_remain">remain</string>
    <string name="ws_getAllGalleryPicId">getAllGalleryPicId</string>
    <string name="ws_getGalleryPic">getGalleryPic</string>
    <string name="ws_picId">picId</string>
    <string name="ws_photo">photo</string>
    <string name="ws_setGalleryPic">setGalleryPic</string>
    <string name="ws_deleteFromGallery">deleteFromGallery</string>
    <string name="ws_changeGalleryPicDescription">changeGalleryPicDescription</string>
    <string name="ws_addTaskGroup">addTaskGroup</string>
    <string name="ws_updateTaskGroup">updateTaskGroup</string>
    <string name="ws_deleteTaskGroup">deleteTaskGroup</string>
    <string name="ws_addTask">addTask</string>
    <string name="ws_updateTaskName">updateTaskName</string>
    <string name="ws_updateTaskPrice">updateTaskPrice</string>
    <string name="ws_deleteTask">deleteTask</string>
    <string name="ws_addSecretaryToOffice2">addSecretaryToOffice2</string>
    <string name="ws_secretary">secretary</string>
    <string name="ws_removeSecretaryFromOffice">removeSecretaryFromOffice</string>
    <string name="ws_getSecretaryInfo">getSecretaryInfo</string>
    <string name="ws_getAllGalleryPicId2">getAllGalleryPicId2</string>
    <string name="ws_getUserTicketSubject">getUserTicketSubject</string>
    <string name="ws_getUserTicket">getUserTicket</string>
    <string name="ws_userId">userId</string>
    <string name="ws_subjectId">subjectId</string>
    <string name="etebar">لطفاً مبلغ درخواستی جهت افزایش اعتبار را به ریال وارد نمایید</string>
    <string name="etebar_cost">مبلغ درخواستی به ریال</string>
    <string name="etebar_txtBtn">افزایش اعتبار</string>
</resources>