<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/my_toolbar"/>
    <TextView
        android:id="@+id/etebar"
        android:textColor="@color/myyellow"
        android:gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/etebar"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/etebar_amount"
        android:background="@drawable/my_edit_text"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:maxLength="10"
        android:hint="@string/etebar_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/etebar_btn"
        android:layout_margin="16dp"
        android:background="@drawable/my_add_button"
        android:text="@string/etebar_txtBtn"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>