<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:scrollbars="none"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/sick_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:text="بیماران"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/sick_backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/inboxTitle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_back_white"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sick_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/my_margin"
            android:clickable="true"
            android:hint="@string/sickName"
            android:padding="5dp" />

        <TextView
            android:id="@+id/sick_family"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/my_margin"
            android:clickable="true"
            android:hint="@string/sickFamily"
            android:padding="5dp" />

        <TextView
            android:id="@+id/sick_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/my_margin"
            android:clickable="true"
            android:hint="@string/sickAddress"
            android:padding="5dp" />

        <TextView
            android:id="@+id/sick_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/my_margin"
            android:clickable="true"
            android:hint="@string/sickPhone"
            android:padding="5dp" />

        <ListView
            android:id="@+id/sick_listView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/my_margin"
            android:layout_marginTop="@dimen/my_margin"
            android:layout_weight="1"
            android:padding="@dimen/my_padding">

        </ListView>
    </LinearLayout>
</LinearLayout>